--- a/1.css
+++ b/1.css
@@ -1,14 +1,15 @@
 #title1
 {
 text-align:center;
-font-size: 16px;
+font-size: 30px;
 }
 #title2
 {
-text-align:left;
-font-size: 14px;
+font-size: 22px;
+text-indent: 5em;
 }
 #p1
 {
 font-size: 12px;
+text-indent: 5em;
 }
