--- a/1.css
+++ b/1.css
@@ -6,10 +6,10 @@ font-size: 30px;
 #title2
 {
 font-size: 22px;
-text-indent: 5em;
+text-align:center;
 }
 #p1
 {
-font-size: 12px;
+font-size: 16px;
 text-indent: 5em;
 }
