--- a/1.css
+++ b/1.css
@@ -1,15 +1,20 @@
 #title1
 {
 text-align:center;
-font-size: 30px;
+font-size: 33px;
 }
 #title2
 {
 font-size: 22px;
-text-align:center;
+text-indent: 5em;
+}
+#title2
+{
+font-size: 22px;
+text-indent: 5em;
 }
 #p1
 {
-font-size: 16px;
+font-size: 20px;
 text-indent: 5em;
 }
