--- a/1.css
+++ b/1.css
@@ -1,16 +1,9 @@
-#title1
-{
-text-align:center;
-font-size: 33px;
-}
-#title2
-{
-font-size: 22px;
-text-indent: 5em;
-}
-
-#p1
-{
-font-size: 18px;
-text-indent: 5em;
-}
+div#container{width:500px}
+div#header {background-color:#99bbbb;}
+div#menu {background-color:#ffff99;height:200px;width:150px;float:left;}
+div#content {background-color:#EEEEEE;height:200px;width:350px;float:left;}
+div#footer {background-color:#99bbbb;clear:both;text-align:center;}
+h1 {margin-bottom:0;}
+h2 {margin-bottom:0;font-size:18px;}
+ul {margin:0;}
+li {list-style:none;}
