--- a/1.css
+++ b/1.css
@@ -1,4 +1,4 @@
-div#container{width:100%}
+div#container{width:1500px}
 div#header {background-color:#99bbbb;}
 div#menu {background-color:#ffff99;float:left;}
 div#content {background-color:#EEEEEE;float:left;}
