--- a/1.css
+++ b/1.css
@@ -1,7 +1,7 @@
 div#container{width:100%;height: 100%;}
 div#header {background-color:#99bbbb;}
-div#menu {background-color:#ffff99;height:200px;width:150px;float:left;}
-div#content {background-color:#EEEEEE;height:200px;width:350px;float:left;}
+div#menu {background-color:#ffff99;height:100%;width:30%;float:left;}
+div#content {background-color:#EEEEEE;height:100%;width:70%;float:left;}
 div#footer {background-color:#99bbbb;clear:both;text-align:center;}
 h1 {margin-bottom:0;}
 h2 {margin-bottom:0;font-size:18px;}
