--- a/1.css
+++ b/1.css
@@ -3,6 +3,7 @@ div#header {background-color:#99bbbb;}
 div#menu {background-color:#ffff99;height:100%;width:30%;float:left;}
 div#content {background-color:#EEEEEE;height:100%;width:70%;float:left;}
 div#footer {background-color:#99bbbb;clear:both;text-align:center;}
+div#photo {width:100%;}
 h1 {margin-bottom:0;}
 h2 {margin-bottom:0;font-size:18px;}
 ul {margin:0;}
