--- a/1.css
+++ b/1.css
@@ -8,3 +8,4 @@ h1 {margin-bottom:0;text-align: center;}
 h2 {margin-bottom:0;font-size:18px;}
 ul {margin:0;}
 li {list-style:none;}
+p {font-size: 15px;}
