--- a/1.css
+++ b/1.css
@@ -2,6 +2,7 @@ div#container{width:100%;height: 100%;}
 div#header {background-color:#99bbbb;}
 div#menu {background-color:#ffff99;height:100%;width:30%;float:left;}
 div#content {background-color:#EEEEEE;height:100%;width:70%;float:left;}
+div#content1 {background-color:#EEEEEE;height:100%;width:100%;float:left;}
 div#footer {background-color:#99bbbb;clear:both;text-align:center;}
 div#photo {width:100%;padding-left: 10%;}
 h1 {margin-bottom:0;text-align: center;}
